conditions will not repeat further down the line,

--- a/Nineteen/Properties/launchSettings.json
+++ b/Nineteen/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Nineteen": {
       "commandName": "Project",
-      "commandLineArgs": "< test.txt",
+      "commandLineArgs": "< input.txt",
       "workingDirectory": "C:\\src\\AdventOfCode\\Nineteen"
     }
   }
